Fix:Did some small refactorings